--- a/config/airflow.secret.env
+++ b/config/airflow.secret.env
@@ -9,5 +9,5 @@ AIRFLOW_HOME=path/to/the/project/src
 AIRFLOW_CONFIG=path/to/the/project/config/airflow.cfg
 AIRFLOW__CORE__FERNET_KEY=<sample_fernet_key>
 # AIRFLOW__WEBSERVER__SECRET_KEY=<sample_secret_key>
-# AIRFLOW__LOGGING__WORKER_LOG_SERVER_PORT=8793
+AIRFLOW__LOGGING__WORKER_LOG_SERVER_PORT=8793
 AIRFLOW__WEBSERVER__WEB_SERVER_PORT=8080
