--- a/config/airflow.secret.env
+++ b/config/airflow.secret.env
@@ -11,3 +11,5 @@ AIRFLOW__CORE__FERNET_KEY=<sample_fernet_key>
 # AIRFLOW__WEBSERVER__SECRET_KEY=<sample_secret_key>
 AIRFLOW__LOGGING__WORKER_LOG_SERVER_PORT=8793
 AIRFLOW__WEBSERVER__WEB_SERVER_PORT=8080
+
+AIRFLOW_INSTALL_VERSION=2.7.3
