fixed: wrong path to postgres.env in docker-compose.yaml, fixed: cant check health of airflow, refactor: comment out fernet key in airflow env, update: fully functional dag.test.py

--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     restart: unless-stopped
     image: postgres:15
     env_file:
-      - ../envs/postgres.env
+      - ../config/postgres.env
     volumes:
       - airflow-backend:/var/lib/postgresql/data
     ports:
