--- a/config/airflow.secret.env
+++ b/config/airflow.secret.env
@@ -1,15 +1,21 @@
-_AIRFLOW_WWW_USER_USERNAME=<sample_user>
-_AIRFLOW_WWW_USER_PASSWORD=<sample_password>
-_AIRFLOW_WWW_USER_FIRSTNAME=<sample_name>
-_AIRFLOW_WWW_USER_LASTNAME=<sample_lastname>
+_AIRFLOW_WWW_USER_USERNAME=airflow
+_AIRFLOW_WWW_USER_PASSWORD=airflow
+_AIRFLOW_WWW_USER_FIRSTNAME=airflow-firstname
+_AIRFLOW_WWW_USER_LASTNAME=airflow-lastname
 _AIRFLOW_WWW_USER_ROLE=Admin
 _AIRFLOW_WWW_USER_EMAIL=admin@admin.admin
 
-AIRFLOW_HOME=path/to/the/project/src
-AIRFLOW_CONFIG=path/to/the/project/config/airflow.cfg
-# AIRFLOW__CORE__FERNET_KEY=<sample_fernet_key>
-# AIRFLOW__WEBSERVER__SECRET_KEY=<sample_secret_key>
 AIRFLOW__LOGGING__WORKER_LOG_SERVER_PORT=8793
 AIRFLOW__WEBSERVER__WEB_SERVER_PORT=8080
-
 AIRFLOW_INSTALL_VERSION=2.7.3
+
+# path to the folder that hold your dags, plugins, logs, etc.
+# AIRFLOW_HOME=path/to/the/project/src
+
+# path to the airflow.cfg file
+# for more information about airflow.cfg, checkout the link below
+# https://airflow.apache.org/docs/apache-airflow/stable/configurations-ref.html
+# AIRFLOW_CONFIG=path/to/the/project/config/airflow.cfg
+
+# Key to encrypt sensitive info, in the airflow-backent (postgres server)
+# AIRFLOW__CORE__FERNET_KEY=<sample_fernet_key>
