update: gitignore `airflow-venv/`,  fixed: empty postgres.env, teardown.sh always remove postgres:15, wrong airflow pip package name,

--- a/config/postgres.env
+++ b/config/postgres.env
@@ -1,5 +1,5 @@
-POSTGRES_ROOT_PASSWORD=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-POSTGRES_EXPOSE_PORT=
+POSTGRES_ROOT_PASSWORD=airflow
+POSTGRES_USER=airflow
+POSTGRES_PASSWORD=airflow
+POSTGRES_DB=airflow
+POSTGRES_EXPOSE_PORT=5432
